--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
-@media(min-width: 768px){
-  .news-input{
+@media (min-width: 768px) {
+  .news-input {
     width: 50%;
   }
 }
 
-@media (max-width:768px){
-  div.accordOuterShell{
+@media (max-width: 768px) {
+  div.accordOuterShell {
     width: 95% !important;
-
   }
-  div.newsButton{
+  div.newsButton {
     width: 100% !important;
-    
   }
-  div.newsButton>*{
+  div.newsButton > * {
     height: 35px !important;
     font-size: 16px !important;
     line-height: 16px !important;
@@ -23,9 +21,8 @@
 /* .bi-chevron-right::before{
   padding-bottom: 1px;
 } */
-body::before{
-  content: '';
+body::before {
+  content: "";
   display: block;
   height: 60px;
 }
-
